--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,9 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <% if false %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+    <% end %>
   </head>
 
   <body><%= render "shared/navbar" %>
