--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,36 +1,16 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <div class="container-fluid">
-    <%= link_to "#", class: "navbar-brand" do %>
-      <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
-    <% end %>
+<header id="header" class="" style="">
+<nav class="main-nav border-bottom_blue background_white">
+  <ul class="grid-row font-uppercase justify-between padding-top-micro padding-bottom-micro">
+    <li class="grid-item"><a class="font_blue hover_red smooth-scroll" href="https://bienvenue.art#about">About</a></li>
+	<li class="grid-item"><a class="font_blue hover_red smooth-scroll" href="https://bienvenue.art/bienvenue-art-fair/">Art Fair</a></li>
+	<li class="grid-item"><a class="font_blue hover_red smooth-scroll" href="https://bienvenue.art#about">Design</a></li>
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
-        <% if user_signed_in? %>
-          <li class="nav-item active">
-            <%= link_to "Home", "#", class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Messages", "#", class: "nav-link" %>
-          </li>
-          <li class="nav-item dropdown">
-            <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Action", "#", class: "dropdown-item" %>
-              <%= link_to "Another action", "#", class: "dropdown-item" %>
-              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
-            </div>
-          </li>
-        <% else %>
-          <li class="nav-item">
-            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-          </li>
-        <% end %>
-      </ul>
-    </div>
-  </div>
-</div>
+    <li class="grid-item"><a class="font_blue hover_red smooth-scroll" href="#contact">Contact</a></li>
+  </ul>
+</nav>
+<nav class="main-nav border-bottom_blue background_white">
+  <ul class="grid-row font-uppercase padding-top-micro padding-bottom-micro" style="display:grid; justify-content:center;">
+    <li class="grid-item"><a class="font_blue hover_red smooth-scroll" href="#partners">Partners</a></li>
+  </ul>
+</nav>
