--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,7 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <% if false %>
-    <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
-    <% end %>
+   <%= javascript_include_tag "/assets/application", "data-turbo-track": "reload", defer: true %>
   </head>
 
   <body><%= render "shared/navbar" %>
