--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,7 +16,8 @@
         </g>
       </svg>
     </div>
-</section>
+  </section>
+  <%= render "shared/navbar" %>
 
 
       <li class="grid-item grid-row justify-around">
@@ -100,8 +101,6 @@
     </div>
   </div>
 </nav>
-</header>
-
 
   <footer id="footer" class="main-footer grid-row justify-between padding-top-micro padding-bottom-micro border-top_blue background_white font_blue" style="">
     <div class="grid-item"><a class="color_blue hover_red" href="?lang=en">ENG</a></div>
@@ -453,16 +452,6 @@ AXA</div>
     </div>
   </div>
 </section>
-	     <!--
-
-  <section class="background_yellow border-bottom_blue padding-bottom-basic">
-    <div class="grid-row justify-center padding-top-micro">
-		<div class="grid-item text-align-center padding-bottom-micro">
-        <a class="font-size-small" href="http://tunicastudio.com/" target="_blank" rel="noopener noreferrer">Designed by TUNICA</a>
-		</div>
-    </div>
-  </section>
-	-->
 
 </main>
 <section id="scripts">
