--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,16 +1,15 @@
-<header id="header" class="" style="">
-<nav class="main-nav border-bottom_blue background_white">
-  <ul class="grid-row font-uppercase justify-between padding-top-micro padding-bottom-micro">
-    <li class="grid-item"><a class="font_blue hover_red smooth-scroll" href="https://bienvenue.art#about">About</a></li>
-	<li class="grid-item"><a class="font_blue hover_red smooth-scroll" href="https://bienvenue.art/bienvenue-art-fair/">Art Fair</a></li>
-	<li class="grid-item"><a class="font_blue hover_red smooth-scroll" href="https://bienvenue.art#about">Design</a></li>
-
-
-    <li class="grid-item"><a class="font_blue hover_red smooth-scroll" href="#contact">Contact</a></li>
-  </ul>
-</nav>
-<nav class="main-nav border-bottom_blue background_white">
-  <ul class="grid-row font-uppercase padding-top-micro padding-bottom-micro" style="display:grid; justify-content:center;">
-    <li class="grid-item"><a class="font_blue hover_red smooth-scroll" href="#partners">Partners</a></li>
-  </ul>
-</nav>
+<div id="header" data-controller="navBar">
+  <nav class="main-nav nav-one">
+    <ul>
+      <li class="grid-item"><a class="smooth-scroll" href="https://bienvenue.art#about">About</a></li>
+  	  <li class="grid-item"><a class="smooth-scroll" href="https://bienvenue.art/bienvenue-art-fair/">Art Fair</a></li>
+  	  <li class="grid-item"><a class="smooth-scroll" href="https://bienvenue.art#about">Design</a></li>
+      <li class="grid-item"><a class="mooth-scroll" href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+  <nav class="main-nav">
+    <ul style="display:grid; justify-content:center;">
+      <li><a href="#partners">Partners</a></li>
+    </ul>
+  </nav>
+</div>
