small bb around

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -27,6 +27,10 @@
   width: 27rem;
 }
 
+.letter-b {
+  width: 2.25vw;
+}
+
 #letter-b.y-axis {
   animation: y-axis-animation 5s infinite linear;
 }
