--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,10 +1,10 @@
 <div id="header" data-controller="navBar">
   <nav class="main-nav nav-one">
     <ul>
-      <li class="grid-item"><a class="smooth-scroll" href="https://bienvenue.art#about">About</a></li>
-  	  <li class="grid-item"><a class="smooth-scroll" href="https://bienvenue.art/bienvenue-art-fair/">Art Fair</a></li>
-  	  <li class="grid-item"><a class="smooth-scroll" href="https://bienvenue.art#about">Design</a></li>
-      <li class="grid-item"><a class="mooth-scroll" href="#contact">Contact</a></li>
+      <li><a href="https://bienvenue.art#about">About</a></li>
+  	  <li><a href="https://bienvenue.art/bienvenue-art-fair/">Art Fair</a></li>
+  	  <li><a href="https://bienvenue.art#about">Design</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
   <nav class="main-nav">
