--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <section id="main-container" style="position: relative;">
-  <section id="intro">
+  <section id="intro" data-controller="hello">
     <svg id="bienvenue-svg" viewBox="0 0 55 539" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
      <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
      <g id="FILE-NAME_BIENVENUE" fill-rule="nonzero" fill="	#272727">
@@ -12,10 +12,10 @@
        <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
        <g id="FILE-NAME_letter-B" fill-rule="nonzero" fill="#565656">
             <path d="M172.7,253.4 C136.8,253.4 114.6,188.9 68,183.2 L68,182.4 C98.6,165.9 116.8,150.9 126.5,131.7 C161.4,131.7 204.2,182 204.2,217.3 C204.2,238.1 189.9,253.4 172.7,253.4 M130.7,93.6 C130.8,91.1 130.8,88.6 130.8,86.1 C146.9,81.2 159.7,65.3 164.6,44.6 C164.6,44.6 164.7,44.5 164.7,44.5 C165.4,51.4 165.9,58.8 167,65.8 C169.5,79.2 175.7,88.4 185,93.6 C191.7,97.4 200,99.2 209.8,99.2 L210.5,100 L127.5,126 C129.6,113.7 130.4,103.9 130.7,93.6 M290.3,251 C288.8,229.2 254.6,239.5 240.7,231.4 C229.2,224.7 231,208.3 232.9,201.8 C237.5,190.9 240.1,179.3 240.1,167.5 C240.1,138.8 223,121.2 202.5,109.3 L246.8,109.3 L246.8,92.7 C246.8,92.7 246.8,92.7 246.7,92.7 L246.7,92.6 L239.1,92.6 C229.1,92.6 222.2,87.6 222.2,72.3 C222.2,28.2 211.6,0.9 169.7,0.9 C147.1,0.9 127.2,12.8 124.8,41.2 L124.1,41.2 C114.5,14.7 89.5,0.9 66,0.9 C47.9,0.9 27.3,9 11.9,23 C16.7,20.8 22.6,19.2 29,19.5 C29.7,19.4 30.4,19.3 31.1,19.3 C45,19.3 54.5,28.2 60.7,42 C66.8,55.7 69.7,74.3 70.2,93.6 C70.3,96.1 70.3,98.6 70.3,101.1 C70.3,134.1 66,168.3 64,182.5 C28.2,182.5 1.8,200.4 -5.68434189e-14,236.5 C1.5,226.7 10.1,219.2 20.6,219.2 C21.5,219.2 22.3,219.3 23.2,219.4 C23.9,219.4 24.5,219.3 25.2,219.3 C36.2,219.3 49.2,234 65.1,249 C49.5,249.1 39.4,253.6 36.1,263.9 C33.1,273.3 37.6,279 40.7,282.6 C51.2,294.6 73.6,293 126.2,292.9 C163.7,292.8 233.5,292.9 233.5,292.9 C260.3,293.3 265.3,287.7 265.3,279 C265.3,273.9 260.6,270 253.3,269.4 C245.4,268.8 236.2,268.8 236.2,268.8 L236.2,267.3 C249.1,267.6 260.2,267.7 268.5,267.6 C280.5,267.4 291.1,262.2 290.3,251" id="Shape"></path>
-        </g>
-        </g>
-      </svg>
-    </div>
+      </g>
+      </g>
+    </svg>
+  </div>
 </section>
 
 
