--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div id="header" data-controller="navBar">
+<div id="header">
   <nav class="main-nav nav-one">
     <ul>
       <li><a href="https://bienvenue.art#about">About</a></li>
