--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
-<section id="main-container" data-controller="home">
-  <section id="intro" data-home-target="bienvenueFirstSection">
+<section id="main-container">
+  <section id="intro">
     <svg id="bienvenue-svg" viewBox="0 0 55 539" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
       <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
       <g id="FILE-NAME_BIENVENUE" fill-rule="nonzero" fill="#565656">
