--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div id="header" data-home-target="navbar">
+<div id="header">
   <nav class="main-nav nav-one">
     <ul>
       <li><%= link_to "ABOUT", root_path(anchor:"about_link"), class:"link" %></li>
