--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -199,20 +199,13 @@
   </main>
   <main id="partners_link" class="skew-scroll" style="transform: skewY(5.08047e-251deg);">
     <section class="all_text">
-    <div class="section_one">
-	    <p> A few of the Hôtel La Louisiane, our main partner
-      </p>
-    </div>
-    <div class="section_two">
-      <p>Often compared to the Chelsea Hotel in New York by its residents and loyal guests, La Louisiane has been active since 1823 in the heart of Saint-Germain-des-Près, keeping alive a good part of the neighborhood's memory. Its walls have grown thicker with both the artistic and literary activity they have hosted since the stay of Verlaine and Rimbaud.<br> In 1943 Jean-Paul Sartre and Simone de Beauvoir settled in the hotel, and with them it became the headquarters of Existentialism. Just as them, numerous writers, painters, visual artists, filmmakers, and photographers have passed through the rooms of La Louisiane; the likes of Juliette Gréco, Miles Davis, Nan Goldin, Lucian Freud, the members of Pink Floyd, and Quentin Tarantino, among others.
-      </p>
-      <div class="section_three">
-        <p>There are countless historical examples that show how creative activity has been an ongoing privilege of the hotel: Picasso encouraged the young César there, Dali joined him with Amanda Lear, Giacometti and Takis offered their works to Albert Cossery in exchange for paying for their rooms, Michael Leiris developed his reflections on art there, Keith Haring drew on its napkins; Nam June Paik enjoyed the absence of televisions in the rooms, and even Cy Twombly went so far as to state that he felt better at La Louisiane than at the Ritz. These and many others have contributed during each decade to shaping the hotel's legendary status.
-        </p>
+      <div>
+        <% @partner.photos.each do |photo| %>
+          <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
+        <% end %>
       </div>
-      <div class="section_four">
-        <p> Other partners:<br> Artviewer<br> Daizylaizy<br> AXA<br>
-        </p>
+      <div>
+        <%= simple_format(@partner.description) %>
       </div>
     </section>
   </main>
