--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -99,3 +99,26 @@
   width: 3.2vw;
   margin-top: 6px;
 }
+
+.margin-top_center_text {
+  margin-top: 9.8vh;
+}
+
+.partner_display {
+  display: flex;
+  flex-direction: row;
+}
+
+.margin_to_photo {
+  margin-left: 2vw;
+}
+
+.display_photos {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.img_partner_juliette {
+  margin-bottom: 15vh;
+}
