--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -191,7 +191,7 @@
           <a href="mailto:info@bienvenue.art" id="email_art"> info@bienvenue.art</a>
         </p>
       </div>
-      <div class="section_two">
+      <div class="section_two_about">
         <p> About the Hotel La Louisiane...<br> Often compared to the Chelsea Hotel in New York by its residents and loyal travelers, La Louisiane, independent since 1823, is at the very center of Saint-Germain-des-Prés, of which it preserves a part of the memory. The walls, filled with the history of art and literature, have been thickening with the passing years since the stay of Verlaine and Rimbaud. In 1943, Jean-Paul Sartre and Simone de Beauvoir settled there and made it the headquarters of the Existentialists.<br> Many writers, painters, visual artists, musicians, filmmakers, and photographers have lived at La Louisiane. The hotel has always offered stays of all artistic, festive and friendly freedoms. Among them, Juliette Gréco, Miles Davis, Nan Goldin, Lucien Freud, the Pink-Floyd, Quentin Tarantino… Etienne Daho dedicated a song to it in his album BLITZ "Hôtel des Infidèles."<br> The hotel has a special relationship with creation: Picasso encouraged the young César there, Dali came to join him with Amanda Lear, Giacometti and Takis offered works of art to Albert Cossery to pay for their rooms, Michel Leiris reflected on art,Keith Haring drew on the hotel napkins, Cy Twombly said he was better off there than at the Ritz,Nam June Paik liked not finding a television there, and so many others who have added to the legend with each passing decade!
         </p>
       </div>
@@ -199,7 +199,7 @@
   </main>
   <main id="partners_link" class="skew-scroll" style="transform: skewY(5.08047e-251deg);">
     <section class="all_text">
-      <div class="partner_display margin-top_center_text">
+      <div class="partner_display margin-top_center_text_partner">
         <div class="display_photos">
           <% @partner.photos.each do |photo| %>
             <%= cl_image_tag photo.key, height: "468px", width: "400px", class: "img_partner_juliette" %>
