need to see together about seeds

--- a/app/views/pages/art_fair.html.erb
+++ b/app/views/pages/art_fair.html.erb
@@ -1,4 +1,6 @@
  <%= render "shared/navbar" %>
-<div>
-  <%= simple_format(@about) %>
-</div>
+ <section class="about_art">
+  <div>
+    <%= simple_format(@about) %>
+  </div>
+</section>
