--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -14,6 +14,10 @@ ul {
   padding: 3px 17px;
 }
 
+.navbar_down {
+  justify-content: space-around;
+}
+
 a:link, .link:link {
   text-decoration: none;
   color: black;
