--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,7 +9,10 @@
       <li data-navbar-target="about">
         <%= link_to "ABOUT", root_path(anchor:"about_link"), class:"link" %>
       </li>
-  	  <li><%= link_to 'Art Fair', art_fair_path %>
+  	  <li>
+        <%= link_to 'Art Fair', art_fair_path %>
+      </li>
+      <li>
       </li>
   	  <li data-navbar-target="design">
         <a href="https://bienvenue.art#about">Design</a>
@@ -22,6 +25,16 @@
   <nav class="main-nav">
     <ul style="display:grid; justify-content:center;">
       <li data-navbar-target="partners"><%= link_to "PARTNERS", root_path(anchor:"partners_link"), class:"link" %></li>
+    </ul>
+    <ul class="navbar_down">
+      <% unless current_page?(root_path) %>
+        <li>
+          <%= link_to "EXHIBITOR", "/exhibitors", class:"link" %>
+        </li>
+        <li>
+          <%= link_to "PROGRAMM", "/art-fair-programm", class:"link" %>
+        </li>
+      <% end %>
     </ul>
   </nav>
 </div>
