--- a/app/assets/stylesheets/pages/art_fair.scss
+++ b/app/assets/stylesheets/pages/art_fair.scss
@@ -1,3 +1,11 @@
 .about_art {
   text-align: center;
+  padding: 0 15vw;
+  height: 85vh;
+}
+
+.pro {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
