--- a/app/views/pages/design_programm.html.erb
+++ b/app/views/pages/design_programm.html.erb
@@ -1,3 +1,6 @@
-<div>
-  <%= simple_format(@programm) %>
-</div>
+<%= render "shared/navbar" %>
+<section class="about_art pro">
+  <div>
+    <%= simple_format(@programm) %>
+  </div>
+</section>
