made some changes on nav-bar as it was not nice

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -201,7 +201,7 @@
   </main>
   <main id="partners_link" class="skew-scroll" style="transform: skewY(5.08047e-251deg);">
     <section class="all_text">
-      <div class="partner_display margin-top_center_text_partner">
+      <div class="partner_display">
         <div class="display_photos">
           <% @partner.photos.each do |photo| %>
             <%= cl_image_tag photo.key, height: "468px", width: "400px", class: "img_partner_juliette" %>
