--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -11,7 +11,7 @@ ul {
   display: flex;
   justify-content: space-between;
   margin: 0;
-  padding: 3px 17px;
+  padding: 4px 1.5vw;
 }
 
 .navbar_down {
@@ -43,10 +43,7 @@ a:active,
 
 .main-nav {
   border-bottom: 1px solid black;
-}
-
-.nav-one {
-  border-top: 1px solid black;
+  background-color: #f4f4f4;
 }
 
 #header {
