made one changement on style

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -83,6 +83,10 @@ body {
   padding: 6%;
 }
 
+.border_contact {
+  border-bottom: none;
+}
+
 #about_link {
   display: flex;
   flex-direction: column;
