--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -213,7 +213,7 @@
       </div>
     </section>
   </main>
-  <section id="contact_link" class="all_text">
+  <section id="contact_link" class="all_text border_contact">
     <div style="transform: skewY(5.08047e-251deg);">
       <div class="logos_lign">
 		    <p><%= link_to "http://instagram.com/bienvenue.art"  do %>
