made one changement on style

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -181,7 +181,7 @@
   <main  id="about_link" class="skew-scroll" style="transform: skewY(5.08047e-251deg);">
     <section class="all_text">
       <div class="section_one">
-        <p class="margin-top_center_text">For its second design edition, Bienvenue Design fair will take place at the Hotel La Louisiane, 60 rue de Seine, in the mythical Saint-Germain-des-Prés district, during the Paris Design Week, from September 8 to 11.<br>
+        <p>For its second design edition, Bienvenue Design fair will take place at the Hotel La Louisiane, 60 rue de Seine, in the mythical Saint-Germain-des-Prés district, during the Paris Design Week, from September 8 to 11.<br>
         Star designers and young talents, 20th century furniture and contemporary creations take over the rooms, hallways and other common spaces of this bohemian hotel that has been the temporary residence of such famous guests as Simone de Beauvoir and Jean-Paul Sartre, Miles Davis and Juliette Greco, Quentin Tarantino, Etienne Daho and Jim Morrison, among many others.<br>
         Galleries, top editors, designers and collectives are selected by the curators Jean-François Declercq et Marie Godfrain to be exhibited in this edition of Bienvenue, echoing the desire of Xavier Blanchot, owner of La Lousiane, to reinstate this historic district in the realm of contemporary creation and regain its position in Parisian cultural life.<br>
         Founded in 2018, BIENVENUE is an events platform which aims to connect galleries, professionals and art industries with both collectors and amateurs.
