--- a/app/views/pages/art_fair_programm.html.erb
+++ b/app/views/pages/art_fair_programm.html.erb
@@ -1,6 +1,6 @@
 <%= render "shared/navbar" %>
 <section class="about_art pro">
   <div>
-    <%= simple_format(@programm) %>
+    <%= simple_format(@art_fair.programm) %>
   </div>
 </section>
