made also changes on about

--- a/app/views/pages/art_fair.html.erb
+++ b/app/views/pages/art_fair.html.erb
@@ -1,9 +1,9 @@
  <%= render "shared/navbar" %>
  <section class="about_art">
-  <div>
+  <div class="descript">
     <%= simple_format(@art_fair.description) %>
   </div>
-  <div>
+  <div class="coordinates">
     <%= simple_format(@art_fair.coordinates) %>
   </div>
 </section>
