--- a/app/views/pages/design.html.erb
+++ b/app/views/pages/design.html.erb
@@ -1,9 +1,9 @@
 <%= render "shared/navbar" %>
 <section class="about_art pro">
-  <div>
+  <div class="descript">
     <%= simple_format(@design.description) %>
   </div>
-  <div>
+  <div class="coordinates-design">
     <%= simple_format(@design.coordinates) %>
   </div>
 </section>
