--- a/app/assets/stylesheets/pages/art_fair.scss
+++ b/app/assets/stylesheets/pages/art_fair.scss
@@ -1,7 +1,11 @@
 .about_art {
   text-align: center;
   padding: 0 15vw;
-  height: 85vh;
+  height: 88vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .pro {
@@ -9,4 +13,28 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.coordinates {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  width: 90vw;
+}
+
+.coordinates-design {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  width: 90vw;
+}
+
+p:first-of-type {
+  margin-bottom: 4vh;
+}
+
+p:nth-of-type(2) {
+  margin-bottom: 3vh;
+}
+
+p:nth-of-type(3) {
+  margin-bottom: 3vh;
 }
