--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -158,4 +158,12 @@ body {
   .letter-b {
     width: 5.25vw;
   }
+
+  .all_text {
+    height: auto;
+  }
+
+  #about_link {
+    border-top: 1px solid black;
+  }
 }
