ok tel homepage

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -8,3 +8,18 @@
   bottom: 0;
   background-color: #F4F4F4;
 }
+
+@media only screen and (min-width:279px) and (max-width:766px) {
+  #footer {
+    padding: 6px;
+    font-size: 12px;
+  }
+
+  .smaller {
+    height: 14px;
+  }
+
+
+
+
+}
