--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,7 +5,7 @@
   <div>
     BIENVENUE ART CONTEMPORAIN — PARIS —
     <a href="https://instagram.com/instagram.com/bienvenue.art">
-      <svg width="23px" height="23px" viewBox="3 1 25 25" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+      <svg width="23px" height="23px" viewBox="3 1 25 25" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="smaller">
         <defs>
           <filter x="-29.2%" y="-20.8%" width="162.5%" height="162.5%" filterUnits="objectBoundingBox" id="filter-1">
             <feOffset dx="0" dy="2" in="SourceAlpha" result="shadowOffsetOuter1"></feOffset>
