--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,10 +1,3 @@
-.fixed {
-  position: fixed;
-  width: 100%;
-  top: 0;
-  z-index: 20;
-}
-
 ul {
   list-style: none;
   text-transform: uppercase;
@@ -46,7 +39,7 @@ a:active,
   background-color: #f4f4f4;
 }
 
-.header {
+#header {
   position: sticky;
   top: 0px;
   z-index: 15;
@@ -93,7 +86,6 @@ a:active,
 
   .main-nav {
     text-align: center;
-    border-bottom: none;
   }
 
   .rotate {
@@ -103,6 +95,13 @@ a:active,
 
   .fa-solid {
     height: 29px;
+    width: 19px;
+  }
+
+  .align_icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .slide {
